maquetado y diseños del index

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
     <main>
         <section class="main-head">
-            <img src="" alt="">
-            <p>Sobre mí</p>
+            <img src="./assets/image/Logo-blanco.png" alt="">
+            <a href="#">Sobre mí</a>
         </section>
         <div class="main-body">
             <h1>Conoce las novedades y noticias del mundo tech</h1>
