Pagina princial terminada

--- a/blogs.html
+++ b/blogs.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/blogs.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <title>Mi blog</title>
 </head>
 <body>
@@ -20,14 +20,22 @@
     </header>
     <main>
         <section class="main-head">
-            <img src="./assets/image/Logo-blanco.png" alt="">
+            <img src="./assets/image/Logo-negro.png" alt="">
             <a href="./sobre-mi.html">Sobre mí</a>
         </section>
-        <div class="main-body">
-            <h1>Conoce las novedades y noticias del mundo tech</h1>
-            <a href="./blogs.html" class="btn-acceso">Entra ya!</a>
-        </div>
-        
     </main>
+    <article>
+        <div class="contenedor-noticias">
+            <section class="img-title">
+                <p>Noticias</p>
+                <img src="./assets/image/lorenzo-herrera-p0j-mE6mGo4-unsplash-2.png" alt="">
+            </section>
+            <section class="description-title">
+                <h1>Título del blogpost</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                <button class="btn-read-plus">Leer más</button>
+            </section>
+        </div>
+    </article>
 </body>
 </html>
