--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -20,14 +20,12 @@
     </header>
     <main>
         <section class="main-head">
-            <img src="./assets/image/Logo-blanco.png" alt="">
-            <a href="./sobre-mi.html">Sobre mí</a>
+            <img src="./assets/image/Logo-negro.png" alt="">
+            <a href="#">Sobre mí</a>
         </section>
-        <div class="main-body">
-            <h1>Conoce las novedades y noticias del mundo tech</h1>
-            <a href="./blogs.html" class="btn-acceso">Entra ya!</a>
-        </div>
-        
     </main>
+    <article>
+        
+    </article>
 </body>
 </html>
