Pagina de blogs terminado

--- a/blogs.html
+++ b/blogs.html
@@ -26,16 +26,65 @@
     </main>
     <article>
         <div class="contenedor-noticias">
-            <section class="img-title">
-                <p>Noticias</p>
-                <img src="./assets/image/lorenzo-herrera-p0j-mE6mGo4-unsplash-2.png" alt="">
-            </section>
-            <section class="description-title">
-                <h1>Título del blogpost</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                <button class="btn-read-plus">Leer más</button>
-            </section>
+            <div class="contenedor-noticias_body">
+                <section class="img-title">
+                    <p>Noticias</p>
+                    <img src="./assets/image/lorenzo-herrera-p0j-mE6mGo4-unsplash-2.png" alt="">
+                </section>
+                <section class="description-title">
+                    <h1>Título del blogpost</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus">Leer más</button>
+                </section>
+            </div>
+        </div>
+        <div class="contenedor-blogposts">
+            <h3 class="contenedor-title">Último blogposts</h3>
+            <div class="card-blogposts">
+                <section class="card-blog">
+                    <img src="./assets/image/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
+                    <h3>Título del Blogpost</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus cards">Leer más</button>
+                </section>
+                <section class="card-blog">
+                    <img src="./assets/image/glenn-carstens-peters-npxXWgQ33ZQ-unsplash-2.png" alt="">
+                    <h3>Título del Blogpost</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus cards">Leer más</button>
+                </section>
+                <section class="card-blog">
+                    <img src="./assets/image/alexandru-acea-XEB8y0nRRP4-unsplash-2.png" alt="">
+                    <h3>Título del Blogpost</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus cards">Leer más</button>
+                </section>
+                <section class="card-blog">
+                    <img src="./assets/image/dose-media-DiTiYQx0mh4-unsplash-2.png" alt="">
+                    <h3>Título del Blogpost</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus cards">Leer más</button>
+                </section>
+                <section class="card-blog">
+                    <img src="./assets/image/corinne-kutz-tMI2_-r5Nfo-unsplash-2.png" alt="">
+                    <h3>Título del Blogpost</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus cards">Leer más</button>
+                </section>
+                <section class="card-blog">
+                    <img src="./assets/image/lorenzo-herrera-p0j-mE6mGo4-unsplash-2.png" alt="">
+                    <h3>Título del Blogpost</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
+                    <button class="btn-read-plus cards">Leer más</button>
+                </section>
+            </div>
         </div>
     </article>
+    <footer>
+        <div class="secundary-footer"></div>
+        <div class="primary-footer">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+        </div>
+    </footer>
 </body>
 </html>
