archvios para pagina sobre-mi

--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,9 @@
             </div>
         </div>
         <div class="contenedor-blogposts">
-            <h3 class="contenedor-title">Último blogposts</h3>
+            <div class="contenedor-title">
+            <h3 class="title">Último blogposts</h3>
+            </div>
             <div class="card-blogposts">
                 <section class="card-blog">
                     <img src="./assets/image/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
