maquetacion de pagina sobre mi

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -25,7 +25,58 @@
         </section>
     </main>
     <article>
-        
+        <div class="contenedor-noticias">
+            <div class="contenedor-noticias_body">
+                <section class="img-title">
+                    <img src="./assets/image/warren-wong-iOWry_4xGmc-unsplash.jpg" alt="">
+                </section>
+                <section class="description-title">
+                    <h1>Hola!</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe deleniti magni veniam maxime quisquam, mollitia repudiandae incidunt, iusto neque harum laboriosam at, quos sint sunt fuga nostrum error itaque. Cum.</p>
+                </section>
+            </div>
+        </div>
+        <div class="contenedor-blogposts">
+            <div class="contenedor-title">
+                <h3 class="title">Proyectos</h3>
+            </div>
+            <div class="contenedor-card-proyectos">
+                <div class="card-proyectos">
+                    <h3>Texto</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis id neque at, quis odit sed fugit repudiandae doloribus praesentium soluta vitae, cum dolorum molestias totam officiis odio ex libero.</p>
+                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis aliquam neque quas vero natus eum dignissimos. </p>
+                </div>
+                <div class="card-proyectos">
+                    <h3>Texto</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis id neque at, quis odit sed fugit repudiandae doloribus praesentium soluta vitae, cum dolorum molestias totam officiis odio ex libero.</p>
+                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis aliquam neque quas vero natus eum dignissimos. Dolore consequuntur tenetur eaque dicta quam ex distinctio veniam. Magni natus cupiditate sed aspernatur.</p>
+                </div>
+                <div class="card-proyectos">
+                    <h3>Texto</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis id neque at, quis odit sed fugit repudiandae doloribus praesentium soluta vitae, cum dolorum molestias totam officiis odio ex libero.</p>
+                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis aliquam neque quas vero natus eum dignissimos. Dolore consequuntur tenetur eaque dicta quam ex distinctio veniam. Magni natus cupiditate sed aspernatur.</p>
+                </div>
+            </div>
+        </div>
     </article>
+
+    <div class="contendor-contacto">
+        <div class="contacto">
+            <img src="" alt="">
+            <h2>Contacto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ex recusandae.</p>
+        </div>
+        <div class="contacto">
+            <img src="" alt="">
+            <h2>Escribe</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ex recusandae.</p>
+        </div>
+    </div>
+    <footer>
+        <div class="secundary-footer"></div>
+        <div class="primary-footer">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+        </div>
+    </footer>
 </body>
 </html>
