Estilos de sobre-mi terminados

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -41,17 +41,17 @@
                 <h3 class="title">Proyectos</h3>
             </div>
             <div class="contenedor-card-proyectos">
-                <div class="card-proyectos">
+                <div class="card-proyectos seccion1">
                     <h3>Texto</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis id neque at, quis odit sed fugit repudiandae doloribus praesentium soluta vitae, cum dolorum molestias totam officiis odio ex libero.</p>
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis aliquam neque quas vero natus eum dignissimos. </p>
                 </div>
-                <div class="card-proyectos">
+                <div class="card-proyectos seccion2">
                     <h3>Texto</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis id neque at, quis odit sed fugit repudiandae doloribus praesentium soluta vitae, cum dolorum molestias totam officiis odio ex libero.</p>
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis aliquam neque quas vero natus eum dignissimos. Dolore consequuntur tenetur eaque dicta quam ex distinctio veniam. Magni natus cupiditate sed aspernatur.</p>
                 </div>
-                <div class="card-proyectos">
+                <div class="card-proyectos seccion3">
                     <h3>Texto</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reiciendis id neque at, quis odit sed fugit repudiandae doloribus praesentium soluta vitae, cum dolorum molestias totam officiis odio ex libero.</p>
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis aliquam neque quas vero natus eum dignissimos. Dolore consequuntur tenetur eaque dicta quam ex distinctio veniam. Magni natus cupiditate sed aspernatur.</p>
@@ -62,14 +62,19 @@
 
     <div class="contendor-contacto">
         <div class="contacto">
-            <img src="" alt="">
-            <h2>Contacto</h2>
+            <img src="./assets/IconosBlog/png/013-newsletter.png" alt="">
+            <div class="contenidos">
+                <h2>Contacto</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ex recusandae.</p>
+            </div>
         </div>
         <div class="contacto">
-            <img src="" alt="">
-            <h2>Escribe</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ex recusandae.</p>
+            <img src="./assets/IconosBlog/png/006-like.png" alt="">
+            <div class="contenidos">
+                <h2>Escribe</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, ex recusandae.</p>
+            </div>
+            
         </div>
     </div>
     <footer>
