--- a/blogs.html
+++ b/blogs.html
@@ -47,37 +47,37 @@
                     <img src="./assets/image/uriel-soberanes-MxVkWPiJALs-unsplash-2.png" alt="">
                     <h3>Título del Blogpost</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                    <button class="btn-read-plus cards">Leer más</button>
+                    <a href="./blogspot.html"><button class="btn-read-plus cards">Leer más</button></a>
                 </section>
                 <section class="card-blog">
                     <img src="./assets/image/glenn-carstens-peters-npxXWgQ33ZQ-unsplash-2.png" alt="">
                     <h3>Título del Blogpost</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                    <button class="btn-read-plus cards">Leer más</button>
+                    <a href="./blogspot.html"><button class="btn-read-plus cards">Leer más</button></a>
                 </section>
                 <section class="card-blog">
                     <img src="./assets/image/alexandru-acea-XEB8y0nRRP4-unsplash-2.png" alt="">
                     <h3>Título del Blogpost</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                    <button class="btn-read-plus cards">Leer más</button>
+                    <a href="./blogspot.html"><button class="btn-read-plus cards">Leer más</button></a>
                 </section>
                 <section class="card-blog">
                     <img src="./assets/image/dose-media-DiTiYQx0mh4-unsplash-2.png" alt="">
                     <h3>Título del Blogpost</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                    <button class="btn-read-plus cards">Leer más</button>
+                    <a href="./blogspot.html"><button class="btn-read-plus cards">Leer más</button></a>
                 </section>
                 <section class="card-blog">
                     <img src="./assets/image/corinne-kutz-tMI2_-r5Nfo-unsplash-2.png" alt="">
                     <h3>Título del Blogpost</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                    <button class="btn-read-plus cards">Leer más</button>
+                    <a href="./blogspot.html"><button class="btn-read-plus cards">Leer más</button></a>
                 </section>
                 <section class="card-blog">
                     <img src="./assets/image/lorenzo-herrera-p0j-mE6mGo4-unsplash-2.png" alt="">
                     <h3>Título del Blogpost</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eius quidem porro excepturi sequi, harum laborum, adipisci quibusdam necessitatibus voluptatem enim aliquam?</p>
-                    <button class="btn-read-plus cards">Leer más</button>
+                    <a href="./blogspot.html"><button class="btn-read-plus cards">Leer más</button></a>
                 </section>
             </div>
         </div>
